# CareerOS

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  dashboard.py  database.py  docker-compose.yml  main.py  mlflow.db  pyproject.toml  temp 2.patch
.ai_context/: AGENT_HIERARCHY.md  MASTER_MAP.md  PHASE_1_STABLE.md
.devcontainer/: devcontainer.json
apps/api/: main.py  mainold.py
apps/ui/: Home.py  OldHome1.py
assignmet1_class_submition/: Career Path & Professional Motivation.pptx  capastone_project_proposal.docx
data/resumes/: Alex Rivera.txt
docs/: BETA_TESTING_RUNBOOK.md  CareerOS Build Roadmap From Scratch.docx
docs/architecture/: ARTIFACT_FLOW_CONTRACTS.md
docs/assignment_docs/: CareerOS Lean Canvas Explained (1).xlsx  CareerOS_features_doc.docx  CareerOS_mvp_feature_list_doc.docx
docs/product/: 01_Feature_Catalog_Ranked.md  02_MVP_Features_Ranked.md  03_Weekly_MVP_Demo_Plan_Week1.md  04_User_Journeys_and_Acceptance_Criteria.md  05_User_Journeys_and_Acceptance_Criteria_new_version.md
docs/project_roadmap_blueprint-doc/: CareerOS Build Roadmap From Scratch.docx  CareerOs_blueprint_doc.docx
docs/quality/: TEST_STRATEGY.md
docs/roadmap/: CAREEROS_MASTER_PLAN_PHASE1_TO_PHASE4 (v1.2)  CAREEROS_MASTER_PLAN_PHASE1_TO_PHASE4.docx  CAREEROS_MASTER_PLAN_PHASE1_TO_PHASE4.md  CareerOS_Execution_Master_Runbook_P1-P12_v1.0.docx  CareerOS_Execution_Master_Runbook_P1-P12_v1.0.md  (+7 more)
logs/: careeros 2.jsonl  careeros.jsonl
outputs/: state.dvc
scripts/: check_repo_sync.sh  generate_demo_resumes.py  generate_grounded_app.py  phase3_doctor.sh  plot_phase3_flow.py  render_smoke.sh  run_api.sh  run_phase2_app.sh  run_phase2_tests.sh
tests/: conftest.py  test_p13_state_and_registry.py
(+144 files in other folders)
