[project]
name = "careeros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mlflow>=3.9.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pypdf>=5.9.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "streamlit>=1.54.0",
    "uvicorn>=0.35.0",
]
