[project]
name = "careeros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.4.0",
    "pytesseract>=0.3.10",
    "sentence-transformers>=3.0.1",
    "qdrant-client>=1.11.1",
    "chromadb>=0.5.11",
    "dvc>=3.66.1",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mlflow>=3.9.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pypdf>=5.9.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "streamlit>=1.54.0",
    "plotly>=5.24.0",
    "rapidfuzz>=3.9.6",
    "sqlalchemy>=2.0.35",
    "streamlit-pdf-viewer>=0.0.19",
    "uvicorn>=0.35.0",
    "wheel",
    "packaging<26",
]
